--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -85,6 +85,9 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: "Noto Sans TC", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -123,3 +126,8 @@ table {
   border-spacing: 0;
 }
 /* 以上為CSS reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
