--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,13 @@
+a,
+p,
+h1,
+h2,
+h3,
+li,
+time,
+span {
+  line-height: 150%;
+}
 .container {
   max-width: 1920px;
   margin: 0 auto;
@@ -10,8 +20,10 @@
   top: 0;
   width: 100%;
   height: 90px;
-  padding: 24px 80px;
-  background: #556677;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
   ul {
     display: flex;
     justify-content: center;
@@ -20,7 +32,10 @@
     li {
       font-size: 28px;
       font-weight: 700;
-      line-height: 150%;
+    }
+    a {
+      text-decoration: none;
+      color: #000;
     }
   }
 }
@@ -30,7 +45,6 @@
   .item {
     flex: 1;
     height: 834px;
-    border-color: aqua;
   }
   .left {
     background-image: url(../img/desktop/index/HeroSection.png);
@@ -45,24 +59,21 @@
     .bannerText {
       max-width: 688px;
       margin-left: 80px;
-      h1 {
-        font-weight: 900;
-        font-size: 100px;
-        color: #0027d5;
-        line-height: 150%;
-      }
-      p {
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 150%;
-        color: #0027d5;
-      }
+    }
+    h1 {
+      font-weight: 900;
+      font-size: 100px;
+      color: #0027d5;
+    }
+    p {
+      font-weight: 700;
+      font-size: 24px;
+      color: #0027d5;
     }
   }
 }
 .bannerTextBox {
   position: relative;
-  border: 1px solid #0027d5;
   margin-top: -200px;
   background-color: #fff;
   max-width: 42%;
@@ -72,7 +83,46 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  ul {
-    display: flex;
+}
+.socialLinks {
+  display: flex;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 72px;
+}
+@media (max-width: 768px) {
+  .banner {
+    flex-direction: column;
+    .item {
+      min-height: 375px;
+    }
+    .left {
+      background-image: url("/src/img/desktop/index/HeroSection.png"); /* 改絕對路徑 */
+      background-size: cover;
+      display: block;
+      width: 100%;
+    }
+    .bannerText {
+      margin: 24px 37px 0 24px;
+      h1 {
+        font-size: 52px;
+      }
+      p {
+        font-size: 24px;
+        color: #0027d5;
+        margin-bottom: 24px;
+      }
+    }
+  }
+  .bannerTextBox {
+    position: relative;
+    margin-top: -1px;
+    background-color: #fff;
+    max-width: 100%;
+    margin: 0 16px; /* 保留左右邊距防貼邊 */
+    padding: 40px 24px;
   }
 }
